Fix #32369: pixel glitch with compositor curves node, and some pixels having black point = white point. That's a degenerate case, clamped it now to 1e5, which is a bit arbitrary, but infinity would give NaN issues.